<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MWmainActivity" >
    
    <!-- main area -->
	<ScrollView  
	android:id="@+id/ScrollView"  
	android:layout_above="@+id/ad"
	android:layout_alignParentTop="true"
	android:layout_height="fill_parent"  
	android:layout_width="fill_parent">  
		<LinearLayout
		android:id="@+id/LinearLayout"
		android:orientation="vertical"
		android:padding="10dp"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<!-- interval -->
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ma_interval_title"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:textColor="#333333"/>
			<Spinner
			    android:id="@+id/interval_spinner"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/ma_interval_description"
		        android:textSize="12sp"
		        android:textColor="#666666"/>
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="10dp"
			    android:background="#333333" />
			<!-- about -->
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ma_about_title"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:textColor="#333333"/>
			<TextView
			    android:id="@+id/about_description"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/ma_about"
		        android:textSize="14sp"
		        android:textColor="#333333"/>
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_marginTop="20dp"
			    android:layout_marginBottom="10dp"
			    android:background="#333333" />
			<!-- author -->
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ma_author_title"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:textColor="#333333"/>
			<TextView
				android:id="@+id/author_tw"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/ma_author_tw"
		        android:textSize="14sp"
		        android:textColor="#333333"/>
		</LinearLayout>
	</ScrollView> 
	
	<com.google.ads.AdView
		android:id="@+id/ad"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="10dp"
		ads:adUnitId="a150d6c6ce9d14a"
	    ads:adSize="BANNER"
	    ads:loadAdOnCreate="true"
		ads:backgroundColor="#000000"
		ads:primaryTextColor="#FFFFFF"
		ads:secondaryTextColor="#CCCCCC" />

</RelativeLayout>